--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-APIAI_TOKEN=
-APIAI_SESSION_ID=
+APIAI_TOKEN=bf493b6c18fb4a5bb6aeeac58ab6c1b7
+APIAI_SESSION_ID=88e58712-a1b0-4ea6-2142-4dd98dc2fb2e
